# NoticeWatch

./: README.md
.github/workflows/: ci.yml
notice_watch_backend/: .gitignore  pyproject.toml  requirements.txt
notice_watch_backend/Scheduled_Job/services/: scrapper.py
notice_watch_backend/app/: main.py
notice_watch_backend/app/api/: appversion.py  auth.py  devicetokens.py  getnotice.py  notices.py  noticeversion.py
notice_watch_backend/app/core/: config.py  dependencies.py  security.py
notice_watch_backend/app/db/: database.py  models.py
notice_watch_backend/app/firebase/: firebase.py
notice_watch_backend/app/notifier/: firebasenotifier.py  new_notice_notifier.py
notice_watch_backend/app/scheduler/: notice_scheduler.py
notice_watch_backend/app/services/: detection.py  scrapper.py
notice_watch_backend/docs/: api_docs.md  scrapper.md
notice_watch_backend/test/: scrapper.ipynb  test_db_read.py
notice_watch_frontend/: .env
notice_watch_frontend/noticewatch/: .gitignore  README.md  pubspec.yaml
notice_watch_frontend/noticewatch/android/app/: build.gradle.kts  google-services.json
notice_watch_frontend/noticewatch/ios/Runner/: Info.plist
notice_watch_frontend/noticewatch/ios/Runner.xcodeproj/: project.pbxproj
notice_watch_frontend/noticewatch/lib/: main.dart  notice.dart  notice_refresh_hub.dart  notification_card.dart  notification_service.dart  repository.dart
notice_watch_frontend/noticewatch/lib/core/: update_dialog.dart
notice_watch_frontend/noticewatch/lib/models/: app_release_model.dart
notice_watch_frontend/noticewatch/lib/pages/: notice_page.dart  notification_page.dart  notifications_list_page.dart
notice_watch_frontend/noticewatch/linux/: CMakeLists.txt
notice_watch_frontend/noticewatch/test/: widget_test.dart
notice_watch_frontend/noticewatch/web/: index.html  manifest.json
notice_watch_frontend/noticewatch/windows/: CMakeLists.txt
(+14 files in other folders)
