[project]
name = "notice-watch-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "apscheduler==3.11.2",
    "beautifulsoup4==4.14.3",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "fastapi==0.128.0",
    "greenlet==3.3.1",
    "h11==0.16.0",
    "html-parser==0.2",
    "idna==3.11",
    "jose==1.0.0",
    "passlib==1.7.4",
    "ply==3.11",
    "prettify==0.1.1",
    "psycopg2-binary==2.9.11",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "schedule==1.2.2",
    "soupsieve==2.8.3",
    "sqlalchemy==2.0.46",
    "starlette==0.50.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "tzlocal==5.3.1",
    "urllib3==2.6.3",
    "uvicorn==0.40.0",
]
