[project]
name = "notice-watch-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler==3.11.2",
    "beautifulsoup4==4.14.3",
    "fastapi==0.128.0",
    "firebase-admin>=7.4.0",
    "jose==1.0.0",
    "passlib==1.7.4",
    "psycopg2-binary==2.9.11",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "python-dotenv==1.2.1",
    "python-multipart>=0.0.29",
    "requests==2.32.5",
    "schedule==1.2.2",
    "sqlalchemy==2.0.46",
    "sqlmodel>=0.0.38",
    "supabase>=2.30.0",
    "uvicorn==0.40.0",
]
[tool.mypy]
plugins = ["pydantic.mypy"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pydantic>=2.12.5",
    "ruff>=0.15.13",
]
